--- a/sass/main.sass
+++ b/sass/main.sass
@@ -8,7 +8,7 @@ $font: 'Raleway', sans-serif
     background-size: cover
     background-position: center top
 $i: !important
-    
+
 *
     margin: 0
     padding: 0
@@ -43,7 +43,7 @@ header
     top: 6.5vh
     right: 5vw
     float: right
-    position: fixed 
+    position: fixed
     z-index: 990
 .hamburger-inner, .hamburger-inner:after, .hamburger-inner:before
     border-radius: 10px $i
@@ -56,7 +56,7 @@ header
 .hamburger-inner:after
     bottom : -15px $i
 .my-header__img
-    background-image: url(../img/head_bg.bmp)
+    background-image: url(../img/head_bg.png)
     +bg_img(i)
     height: 82vh
     min-height: 600px
@@ -137,7 +137,7 @@ h2
     display: flex
     justify-content: space-between
 .services__content_img
-    background: url(../img/services.jpg) 
+    background: url(../img/services.jpg)
     +bg_img(i)
     width: 40%
     max-width: 700px
@@ -157,14 +157,14 @@ h2
     min-height: 800px
     div
         p
-            width: 50%    
-            font: 400 1.5rem 'Montserrat', sans-serif 
+            width: 50%
+            font: 400 1.5rem 'Montserrat', sans-serif
             float: right
             line-height: 1.7
             letter-spacing: 1px
             text-shadow: 1px 1px 0px #d5bdd4
         span
-            font: 800 3rem 'Montserrat', sans-serif 
+            font: 800 3rem 'Montserrat', sans-serif
             text-transform: uppercase
             letter-spacing: 1px
             padding: 10px 20px
@@ -217,7 +217,7 @@ h2
             margin-top: 25px
 #my-menu
     .fa
-        color: red 
+        color: red
         text-shadow: none $i
 .s1
     .p1
@@ -245,7 +245,7 @@ h2
     margin-top: -50px
     color: #fff
     .slide
-        box-shadow: 25px 25px 20px rgba(82,82,82,0.5) 
+        box-shadow: 25px 25px 20px rgba(82,82,82,0.5)
         opacity: 1
         background: #f81365 $i
         .person__photo
@@ -264,15 +264,15 @@ h2
 .reviews
     position: relative
 .fa-chevron-left
-    position: absolute 
+    position: absolute
     left: 10px
     top: 70%
     z-index: 2
     margin-top: -15px
     cursor: pointer
 .fa-chevron-right
-    position: absolute 
-    right: 10px 
+    position: absolute
+    right: 10px
     top: 70%
     z-index: 2
     margin-top: -15px
@@ -324,15 +324,15 @@ h2
         align-items: center
         justify-content: space-between
         margin-bottom: 82px
-        .fa   
+        .fa
             color: #303335 $i
             text-shadow: 0 0 3px #828282 $i
             font-size: 7rem $i
-            
+
 .icons__wrap
-    div:hover 
+    div:hover
         transform: scale(1.1)
-        color: #fff 
+        color: #fff
         background: #f81365
         text-shadow: 3px 3px 3px #a90260
         box-shadow: 0 0 20px #828282
@@ -395,7 +395,7 @@ footer
         font: 800 5rem 'Montserrat', sans-serif
         text-shadow: 3px 3px 3px #a90260
         color: #fff
-        text-transform: uppercase 
+        text-transform: uppercase
         border-bottom: 3px solid #fff
         letter-spacing: 2px
         &:hover
@@ -405,7 +405,7 @@ footer
     .fa
         color: #fff $i
         border: none
-        margin: 5px 15px 
+        margin: 5px 15px
         font-size: 3rem $i
         &:hover
             transition: .5s ease
@@ -439,12 +439,5 @@ footer
 @keyframes spin
     from
         transform: translate(-50%,-50%) rotate(0deg)
-    to 
-        transform: translate(-50%,-50%) rotate(360deg) 
-    
-
-
-
-
-
-    
+    to
+        transform: translate(-50%,-50%) rotate(360deg)
